--- a/templates/products.html
+++ b/templates/products.html
@@ -17,7 +17,7 @@
 
 TemplateMo 546 Raheem Enterprises
 
-https://templatemo.com/tm-546-rahee-enterprises
+https://templatemo.com/tm-546-raheem-enterprises
 
 -->
 
@@ -36,7 +36,7 @@ https://templatemo.com/tm-546-rahee-enterprises
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/"><h2>Raheem <em>Enterprises</em></h2></a>
+          <a class="navbar-brand" href="/"><h2>Royal Mamas <em>& Tots</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,17 +50,32 @@ https://templatemo.com/tm-546-rahee-enterprises
               <li class="nav-item active">
                     <!-- Dropdown -->
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
-                   Products
-                  </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                    <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                    <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                    <a class="dropdown-item" href="/blankets">Blankets</a>
-                    <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                    <a class="dropdown-item" href="/marvins">Classic SMarvins</a>
-                  </div>
+                    <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                      Products
+                    </a>
+                    <div class="dropdown-menu">
+
+                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
+                                Clothings
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/shoes">Classic Shoes</a>
+                                <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
+                                <a class="dropdown-item" href="/scarves">Classic Scarves</a>
+                                <a class="dropdown-item" href="/blankets">Blankets</a>
+                                <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
+                                <a class="dropdown-item" href="/marvins">Classic Marvins</a>
+                            </div>
+
+                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
+                                Bathings
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item text-center" href="/bathings">Bath Tubs</a>
+                                <a class="dropdown-item text-center" href="/bathings">Bath Toys</a>
+                            </div>
+
+                    </div>
                 </li>
               </ul>
               </li>
@@ -92,7 +107,7 @@ https://templatemo.com/tm-546-rahee-enterprises
           <div class="col-md-12">
             <div class="text-content">
               <h4>New arrivals</h4>
-              <h2>Raheem Enterprises Products</h2>
+              <h2>Royal Mamas & Tots Products</h2>
             </div>
           </div>
         </div>
@@ -136,9 +151,9 @@ https://templatemo.com/tm-546-rahee-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
+                        <a href="/hoodies"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="/inventory"><h4>Classic Hoodies</h4></a>
+                          <a href="/hoodies"><h4>Classic Hoodies</h4></a>
                           <h6>$16.75</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -154,9 +169,9 @@ https://templatemo.com/tm-546-rahee-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="#"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
+                        <a href="/scarves"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Classic Scarves</h4></a>
+                          <a href="/scarves"><h4>Classic Scarves</h4></a>
                           <h6>$32.50</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -172,9 +187,9 @@ https://templatemo.com/tm-546-rahee-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="#"><img src="../static/images/images%20(1).jpeg" alt=""></a>
+                        <a href="/blankets"><img src="../static/images/images%20(1).jpeg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Woolen Blankets</h4></a>
+                          <a href="/blankets"><h4>Woolen Blankets</h4></a>
                           <h6>$24.60</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -190,9 +205,9 @@ https://templatemo.com/tm-546-rahee-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="../static/images/1.jpg" alt=""></a>
+                        <a href="/pull_necks"><img src="../static/images/1.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Pull Neck Sweaters</h4></a>
+                          <a href="/pull_necks"><h4>Pull Neck Sweaters</h4></a>
                           <h6>$18.75</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
