--- a/templates/wipes.html
+++ b/templates/wipes.html
@@ -17,7 +17,7 @@
 
 TemplateMo 546 Raheem Enterprises
 
-https://raheem.com/tm-546-raheem-enterprises
+https://templatemo.com/tm-546-raheem-enterprises
 
 -->
 
@@ -47,82 +47,92 @@ https://raheem.com/tm-546-raheem-enterprises
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
-                   Products
-                  </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                    <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                    <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                    <a class="dropdown-item" href="/blankets">Blankets</a>
-                    <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                    <a class="dropdown-item" href="/marvins">Classic SMarvins</a>
-                  </div>
+              <li class="nav-item active">
+                    <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                      Products
+                    </a>
+                    <div class="dropdown-menu">
+
+                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
+                                Clothings
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/shoes">Classic Shoes</a>
+                                <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
+                                <a class="dropdown-item" href="/scarves">Classic Scarves</a>
+                                <a class="dropdown-item" href="/blankets">Blankets</a>
+                                <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
+                                <a class="dropdown-item" href="/marvins">Classic Marvins</a>
+                            </div>
+
+                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
+                                Bathings
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item text-center" href="/bathings">Bath Tubs</a>
+                                <a class="dropdown-item text-center" href="/bathings">Bath Toys</a>
+                            </div>
+
+                    </div>
                 </li>
+              </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contacts</a>
               </li>
-                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
+              </li>
+                <li> class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+    <br><br><br><br><h1 class="text-center">WIPES <em class="text-danger">DASHBOARD</em></h1>
 
-    <br><br><br><br><h1 class="text-center">Our Hoodies Dashboard</h1>
-  <div class="row">
-{#      Nike#}
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <a href=""><button>LITTLE ANGELS</button></a>
+        </div>
+        <div class="col-4"></div>
+    </div>
 
-      <div class="col-3">
-      <br><br><h4>Super Nike</h4>
-         <div>
-             <img height="250" width="200" src="../static/images/hoodies/nike/41aPh2-DdgL.jpg" alt="">
-             <img height="250" width="200" src="../static/images/hoodies/nike/d25d3d_2d9dba618dbd49588fee440df7c95fa3_mv2.jpg" alt="">
-             <img height="250" width="200" src="../static/images/hoodies/nike/nike-hoodie.png" alt="">
-         </div>
-      </div>
-{#          vans#}
-      <div class="col-3">
-          <br><br><h4>Vans</h4>
-          <div>
-              <img src="../static/images/hoodies/vans/images.jpeg" alt="">
-              <img src="../static/images/hoodies/vans/vans-Black-Zodiac-Printed-Hoodie.jpeg" alt="">
-              <img height="300" src="../static/images/hoodies/vans/9929730__1125x1500%20(1).jpg" alt="">
-          </div>
-      </div>
-{#      Adidas#}
-      <div class="col-3">
-          <br><br><h4>Adidas Classic</h4>
-          <div>
-              <img height="250" src="../static/images/hoodies/adidas/31j4tI1cLlL.jpg" alt="">
-              <img height="250" src="../static/images/hoodies/adidas/0103944_trefoil-hoodie_550.jpeg" alt="">
-              <img src="../static/images/hoodies/adidas/s-l300.jpg" alt="">
-          </div>
-      </div>
-{#      Louis Voitton#}
-      <div class="col-3">
-          <br><br><h4>Louis Voitton</h4>
-          <div>
-              <img height="250" width="270" src="../static/images/hoodies/vl/s-l400.jpg" alt="">
-              <img height="250" width="270" src="../static/images/hoodies/vl/13297939_photogrid-plus-1602582833977_1024x1280.jpg" alt="">
-              <img height="250" src="../static/images/hoodies/vl/m_60527cf8691412a114a475b5.jpg" alt="">
-          </div>
-      </div>
-      <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em>Dashboard</em></button></h2></a>
-  </div>
+    <div class="row mt-5">
+        <div class="col-3"></div>
+        <div class="col-3">
+            <a href=""><button>HUGGIES</button></a>
+        </div>
+        <div class="col-3">
+            <a href=""><button>PAMPERS</button></a>
+        </div>
+        <div class="col-3"></div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-3"></div>
+        <div class="col-3">
+            <a href=""><button>AVEENO</button></a>
+        </div>
+        <div class="col-3">
+            <a href=""><button>WATER WIPES</button></a>
+        </div>
+        <div class="col-3"></div>
+    </div>
 
 
-    <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -136,7 +146,8 @@ https://raheem.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-   <!-- Bootstrap core JavaScript -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -159,5 +170,6 @@ https://raheem.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 </body>
 </html>
