--- a/templates/blankets.html
+++ b/templates/blankets.html
@@ -34,7 +34,7 @@ https://raheem.com/tm-546-raheementerprises-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/"><h2>Raheem <em>Enterprises</em></h2></a>
+          <a class="navbar-brand" href="/"><h2>Royal Mamas<em>& Tots</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
