--- a/templates/diapers.html
+++ b/templates/diapers.html
@@ -17,7 +17,7 @@
 
 TemplateMo 546 Raheem Enterprises
 
-https://raheem.com/tm-546-raheem-enterprises
+https://templatemo.com/tm-546-raheem-enterprises
 
 -->
 
@@ -79,50 +79,40 @@ https://raheem.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">Our Hoodies Dashboard</h1>
-  <div class="row">
-{#      Nike#}
+    <br><br><br><br><h1 class="text-center">DIAPERS <em class="text-danger">DASHBOARD</em></h1>
 
-      <div class="col-3">
-      <br><br><h4>Super Nike</h4>
-         <div>
-             <img height="250" width="200" src="../static/images/hoodies/nike/41aPh2-DdgL.jpg" alt="">
-             <img height="250" width="200" src="../static/images/hoodies/nike/d25d3d_2d9dba618dbd49588fee440df7c95fa3_mv2.jpg" alt="">
-             <img height="250" width="200" src="../static/images/hoodies/nike/nike-hoodie.png" alt="">
-         </div>
-      </div>
-{#          vans#}
-      <div class="col-3">
-          <br><br><h4>Vans</h4>
-          <div>
-              <img src="../static/images/hoodies/vans/images.jpeg" alt="">
-              <img src="../static/images/hoodies/vans/vans-Black-Zodiac-Printed-Hoodie.jpeg" alt="">
-              <img height="300" src="../static/images/hoodies/vans/9929730__1125x1500%20(1).jpg" alt="">
-          </div>
-      </div>
-{#      Adidas#}
-      <div class="col-3">
-          <br><br><h4>Adidas Classic</h4>
-          <div>
-              <img height="250" src="../static/images/hoodies/adidas/31j4tI1cLlL.jpg" alt="">
-              <img height="250" src="../static/images/hoodies/adidas/0103944_trefoil-hoodie_550.jpeg" alt="">
-              <img src="../static/images/hoodies/adidas/s-l300.jpg" alt="">
-          </div>
-      </div>
-{#      Louis Voitton#}
-      <div class="col-3">
-          <br><br><h4>Louis Voitton</h4>
-          <div>
-              <img height="250" width="270" src="../static/images/hoodies/vl/s-l400.jpg" alt="">
-              <img height="250" width="270" src="../static/images/hoodies/vl/13297939_photogrid-plus-1602582833977_1024x1280.jpg" alt="">
-              <img height="250" src="../static/images/hoodies/vl/m_60527cf8691412a114a475b5.jpg" alt="">
-          </div>
-      </div>
-      <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em>Dashboard</em></button></h2></a>
-  </div>
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <a href=""><button class="justify-content-center">PAMPERS</button></a>
+        </div>
+        <div class="col-4"></div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-3"></div>
+        <div class="col-3">
+            <a href=""><button>HUGGIES</button></a>
+        </div>
+        <div class="col-3">
+            <a href=""><button>LITTLE ANGELS</button></a>
+        </div>
+        <div class="col-3"></div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-3"></div>
+        <div class="col-3">
+            <a href=""><button>RASCAL & FRIENDS</button></a>
+        </div>
+        <div class="col-3">
+            <a href=""><button>FRED & FLO</button></a>
+        </div>
+        <div class="col-3"></div>
+    </div>
 
 
-    <footer>
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -159,5 +149,6 @@ https://raheem.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 </body>
 </html>
