--- a/templates/bathings.html
+++ b/templates/bathings.html
@@ -49,25 +49,11 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                <li class="nav-item">
+                    <a class="nav-link" href="/products">
                       Products
                     </a>
-                    <div class="dropdown-menu">
 
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Clothings
-                            </a>
-                            <div class="dropdown-menu">
-
-                            </div>
-
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Bathings
-
-                            </a>
-
-                    </div>
                 </li>
               </ul>
               </li>
@@ -137,6 +123,8 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div class="col-4">
             <a href=""><button>BATH TOYS</button></a>
         </div>
+        <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em>Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Products <em>Dashboard</em></button></h2></a>
     </div>
 
 
