--- a/templates/care.html
+++ b/templates/care.html
@@ -53,7 +53,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     <a class="nav-link" href="/products">
                       Products
                     </a>
-
                 </li>
               </ul>
               </li>
@@ -78,43 +77,43 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">SKIN CARE'S <em class="text-danger">DASHBOARD</em></h1>
 
     <div class="row">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>BIBS & MUSLIN SQUARE</button></a>
+            <a href=""><button>Aveeno Cream</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BOTTLE FEEDING & STERILIZERS</button></a>
+            <a href=""><button>Dove's Creams</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
     <div class="row mt-5">
-         <div class="col-3"></div>
+        <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>SOOTHERS & TEETHERS</button></a>
+            <a href=""><button>Infacare</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
+            <a href=""><button>E45 Creams</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
     <div class="row mt-5">
-         <div class="col-3"></div>
+        <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
+            <a href=""><button>Johnson & Johnson's</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
+            <a href=""><button>Palmers & Cocoa Butter</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
 
- <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -125,6 +124,9 @@ https://templatemo.com/tm-546-raheem-enterprises
             </div>
           </div>
         </div>
+          <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em>Dashboard</em></button></h2></a>
+          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
+
       </div>
     </footer>
 
