--- a/templates/equipments.html
+++ b/templates/equipments.html
@@ -49,12 +49,10 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                     <a class="nav-link" href="/products">
                       Products
                     </a>
-
-                </li>
               </ul>
               </li>
               <li class="nav-item">
@@ -78,43 +76,39 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">PLAY EQUIPMENTS <em class="text-danger">DASHBOARD</em></h1>
 
-    <div class="row">
+    <div class="row ml-5">
+        <div class="col-4 text-white"></div>
+        <div class="col-4">
+            <a href=""><button>Baby Play Mat</button></a>
+        </div>
+        <div class="col-4"></div>
+    </div>
+
+    <div class="row mt-5 ml-5">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>BIBS & MUSLIN SQUARE</button></a>
+            <a href=""><button>Playing Gym</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BOTTLE FEEDING & STERILIZERS</button></a>
+            <a href=""><button>Baby Toys</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
+      <div class="row mt-5 ml-5">
+        <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>SOOTHERS & TEETHERS</button></a>
+            <a href=""><button>VTech Walkers</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
+            <a href=""><button>Toys</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
-        </div>
-        <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-
- <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -125,6 +119,8 @@ https://templatemo.com/tm-546-raheem-enterprises
             </div>
           </div>
         </div>
+          <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
+          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
       </div>
     </footer>
 
