--- a/templates/formula.html
+++ b/templates/formula.html
@@ -78,43 +78,44 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">BABY FORMULAE <em class="text-danger">DASHBOARD</em></h1>
 
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>BIBS & MUSLIN SQUARE</button></a>
+        <div class="row mt-5">
+            <div class="col-3"></div>
+            <div class="col-3">
+                <a href=""><button>Aptamil Range</button></a>
+            </div>
+            <div class="col-3">
+                <a href=""><button>SMA Formulae</button></a>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3">
-            <a href=""><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>SOOTHERS & TEETHERS</button></a>
+        <div class="row mt-5">
+            <div class="col-3"></div>
+            <div class="col-3">
+                <a href=""><button>Cow & Gate Formulae</button></a>
+            </div>
+            <div class="col-3">
+                <a href=""><button>Kendamil Formulae</button></a>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
+        <div class="row mt-5">
+            <div class="col-3"></div>
+            <div class="col-3">
+                <a href=""><button>Hipp Milk</button></a>
+            </div>
+            <div class="col-3">
+                <a href=""><button>Mammy Care Formulae</button></a>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
 
- <footer>
+
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
