--- a/templates/marvins.html
+++ b/templates/marvins.html
@@ -9,15 +9,15 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Raheem Enterprises</title>
+    <title>RAHEEM ENTERPRISES WEBSITE</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!--
 
-TemplateMo 546 Raheem Enterprises
+TemplateMo 546 Sixteen Clothing
 
-https://templatemo.com/tm-546-raheem-enterprises
+https://templatemo.com/tm-546-sixteen-clothing
 
 -->
 
@@ -30,33 +30,26 @@ https://templatemo.com/tm-546-raheem-enterprises
 
   <body>
 
-
-
     <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="/"><h2>Royal Mamas <em>& Tots</em></h2></a>
+          <a class="navbar-brand" href="/"><h2>Royal Mamas<em>&Tots</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item active">
-                    <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products">
-                      Products
-                    </a>
-
+              <li class="nav-item dropdown">
+                  <a class="nav-link" href="/products">
+                   Products
+                  </a>
                 </li>
-              </ul>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
@@ -78,43 +71,39 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h2 class="text-center">Marvins Dashboard</h2>
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>BIBS & MUSLIN SQUARE</button></a>
+        <div class="col-4">
+            <br><br><h3 class="text-center">Designer</h3>
+            <img src="../static/images/marvins/designer/download.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/designer/13691605_photogrid-1603430000259_1024x1365.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/designer/14491165_photogrid-1605530893952_1024x1024.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/designer/16452876_img-20210119-162512-699_1024x1024.jpg" height="300" width="280" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>SOOTHERS & TEETHERS</button></a>
+        <div class="col-4">
+            <br><br><h3 class="text-center">Kings Collection</h3>
+            <img src="../static/images/marvins/king/428-ashgrey-2666.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/king/428-maroon-2669.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/king/pb-26-3121.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/king/1%20(1).jpg" height="300" width="280" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
+        <div class="col-4">
+            <br><br><h4 class="text-center">Fuzzy Knits</h4>
+            <img src="../static/images/marvins/knits/download%20(1).jpeg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/knits/m_6092db95463d4f4f34299a11.jpg" height="300" width="280" alt="">
+            <img src="../static/images/marvins/knits/b732904f972db24275ec16d3b4abc2b8.png" height="300" width="280" alt="">
+            <img src="../static/images/marvins/knits/images.jpeg" height="300" width="280" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
+        <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
- <footer>
+      <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -129,7 +118,7 @@ https://templatemo.com/tm-546-raheem-enterprises
     </footer>
 
 
-    <!-- Bootstrap core JavaScript -->
+   <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
