--- a/templates/clothings.html
+++ b/templates/clothings.html
@@ -50,32 +50,9 @@ https://templatemo.com/tm-546-raheem-enterprises
               <li class="nav-item active">
                     <!-- Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-                    <div class="dropdown-menu">
-
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Clothings
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                                <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                                <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                                <a class="dropdown-item" href="/blankets">Blankets</a>
-                                <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                                <a class="dropdown-item" href="/marvins">Classic Marvins</a>
-                            </div>
-
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Bathings
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item text-center" href="/bathings">Bath Tubs</a>
-                                <a class="dropdown-item text-center" href="/bathings">Bath Toys</a>
-                            </div>
-
-                    </div>
                 </li>
               </ul>
               </li>
