--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,17 +46,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                  <a class="nav-link" href="/products">
                    Products
                   </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                    <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                    <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                    <a class="dropdown-item" href="/blankets">Blankets</a>
-                    <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                    <a class="dropdown-item" href="/marvins">Classic SMarvins</a>
-                  </div>
                 </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -132,11 +124,12 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <td>Designer,Fuzzy Knits,Kings Collection</td>
                 <td>1000</td>
                 <td style="height: 30px">
-                    <a href="#"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+                    <a href="/marvins"><button type="button" class="btn btn-outline-danger">Explore</button></a>
                 </td>
     </tr>
     </table>
-<a class="navbar-brand btn-block  text-center" href="/"><h2><button>Home</button></h2></a>
+    <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
+    <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
 
       <footer>
       <div class="container">
