--- a/templates/diapers.html
+++ b/templates/diapers.html
@@ -48,17 +48,9 @@ https://templatemo.com/tm-546-raheem-enterprises
                 </a>
               </li>
                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                  <a class="nav-link dropdown-toggle" href="/products">
                    Products
                   </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                    <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                    <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                    <a class="dropdown-item" href="/blankets">Blankets</a>
-                    <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                    <a class="dropdown-item" href="/marvins">Classic SMarvins</a>
-                  </div>
                 </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -123,6 +115,8 @@ https://templatemo.com/tm-546-raheem-enterprises
             </div>
           </div>
         </div>
+          <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
+          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
       </div>
     </footer>
 
