--- a/templates/products_dash.html
+++ b/templates/products_dash.html
@@ -49,33 +49,10 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                <li class="nav-item">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-                    <div class="dropdown-menu">
-
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Clothings
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                                <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                                <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                                <a class="dropdown-item" href="/blankets">Blankets</a>
-                                <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                                <a class="dropdown-item" href="/marvins">Classic Marvins</a>
-                            </div>
-
-                            <a class="nav-link dropdown-toggle text-dark" href="/products" id="navbardrop" data-toggle="dropdown">
-                                Bathings
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item text-center" href="/bathings">Bath Tubs</a>
-                                <a class="dropdown-item text-center" href="/bathings">Bath Toys</a>
-                            </div>
-
-                    </div>
                 </li>
               </ul>
               </li>
@@ -102,9 +79,9 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <br><br><br><br><h1 class="text-center">Products Dashboard</h1>
     <div class="row">
-        <div class="col4 text-white">fjhvhghbvhvthbfjfjvngjdsssssssssssssssssssssssssssssssfchbg</div>
+        <div class="col4 text-white">klonllojlolposssssssssssssssssssssssssssssssfchbg</div>
         <div class="col-4">
-            <a href="" class="justify-content-center"><button>CLOTHINGS</button></a>
+            <a href="/clothings" class="justify-content-center"><button>CLOTHINGS</button></a>
         </div>
     </div>
 
