--- a/templates/pull_necks.html
+++ b/templates/pull_necks.html
@@ -46,17 +46,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li>
                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products" id="navbardrop" data-toggle="dropdown">
+                  <a class="nav-link" href="/products">
                    Products
                   </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/shoes">Classic Shoes</a>
-                    <a class="dropdown-item" href="/hoodies">Classic Hoodies</a>
-                    <a class="dropdown-item" href="/scarves">Classic Scarves</a>
-                    <a class="dropdown-item" href="/blankets">Blankets</a>
-                    <a class="dropdown-item" href="/pull_necks">Pull Neck Sweaters</a>
-                    <a class="dropdown-item" href="/marvins">Classic SMarvins</a>
-                  </div>
                 </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -110,7 +102,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <img src="../static/images/pullnecks/elastic/1%20(1).jpg" height="300" width="280" alt="">
             </div>
         </div>
-        <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em>Dashboard</em></button></h2></a>
+               <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
    <footer>
