--- a/templates/skirts.html
+++ b/templates/skirts.html
@@ -47,74 +47,55 @@ https://templatemo.com/tm-546-raheem-enterprises
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item active">
-                    <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products">
-                      Products
-                    </a>
-
-                </li>
-              </ul>
-              </li>
+               <li class="nav-item dropdown">
+                  <a class="nav-link" href="/products">
+                   Products
+                  </a>
+                </li>>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contacts</a>
               </li>
+                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
-              </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
-
+    <br><br><br><br><h2 class="text-center">Skirts Dashboard</h2>
     <div class="row">
-        <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>BIBS & MUSLIN SQUARE</button></a>
+            <img src="../static/images/skirts/images.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/skirts/download.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/skirts/1.jpg" height="300" width="280" alt="">
+            <img src="../static/images/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>SOOTHERS & TEETHERS</button></a>
+        <div class="col-4">
+            <img src="../static/images/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
+            <img src="../static/images/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
+            <img src="../static/images/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
         </div>
-        <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
+        <div class="col-4">
+            <img src="../static/images/skirts/image.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
+            <img src="../static/images/skirts/images%20(1).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/skirts/images%20(2).jpeg" height="300" width="300" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
     </div>
 
 
- <footer>
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -128,8 +109,7 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-
-    <!-- Bootstrap core JavaScript -->
+   <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
